--- a/portfolio.html
+++ b/portfolio.html
@@ -456,17 +456,6 @@ z-index: 3;
 
 <img src="https://i.imgur.com/NC62NZP.gif">
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/yZDQncB.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/iSQXs89.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/40yJb4m.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/KyF2u47.png"><br><br>
-<img width="auto" height="320px" src="https://i.imgur.com/uTSJoqY.png"/> 
-<img width="auto" height="320px" src="https://i.imgur.com/jSHmf04.png"/><br><br>
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"><br><br>
@@ -479,62 +468,54 @@ z-index: 3;
 
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> ascii art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img src="https://i.imgur.com/R7ay7fJ.png"><br>
-<img src="https://i.imgur.com/R3XEkvO.png"><br><br>
-<img src="https://i.imgur.com/gaGzG0z.png">
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+　　<img width="auto" height="250px" src="https://i.imgur.com/WOx9j1W.png">　
+<img width="auto" height="250px" src="https://i.imgur.com/HnO6VtX.png"><br><br>
+<img width="auto" height="150px" src="https://i.imgur.com/vlSTDfe.png">　
+<img width="auto" height="150px" src="https://i.imgur.com/qunDIJU.png"><br><br>
+　　<img width="auto" height="250px" src="https://i.imgur.com/JsN6EKu.png">　
+<img width="auto" height="250px" src="https://i.imgur.com/C3Jv1i8.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="400px" height="auto" src="https://i.imgur.com/kW0Y74l.png"><br><br><br><br>
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<a href="/milkywoods" target="_blank"><img src="https://i.imgur.com/bQqf98x.gif"/></a><br><br>
+<font style="font-size: 8px;" color="#b38d94">
+( click to enter milky woods )
+</font>
+<br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
+
+
+
+
+
+
+
+
+
+
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="auto" height="140px" src="https://i.imgur.com/wk3mNDA.png">
-<img width="auto" height="175px" src="https://i.imgur.com/Sr63dkH.png"><br><br>
-<img width="auto" height="160px" src="https://i.imgur.com/4aYtTpW.png">
-<img width="auto" height="145px" src="https://i.imgur.com/duXfaS2.png"><br><br>
-<img width="auto" height="175px" style="position:relative; left:15px;" src="https://i.imgur.com/S2EVcsO.png">
-<img width="auto" height="175px" style="position:relative; right:15px;"src="https://i.imgur.com/dbT2rab.png"><br><br>
-<img width="auto" height="175px" src="https://i.imgur.com/2O47CWj.png">　
-<img width="auto" height="175px" src="https://i.imgur.com/boeonj4.png"><br><br><br>
-　<img src="https://i.imgur.com/Xd1FOQT.png">　
-<img src="https://i.imgur.com/JAyaC3w.png"><br><br>
-<img width="auto" height="155px" src="https://i.imgur.com/wLCd9cx.png">
-<img width="auto" height="155px" src="https://i.imgur.com/eKOxtVk.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/TAoxy3Y.png">
+<img width="auto" height="200px" src="https://i.imgur.com/xlTn2Iy.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/3jYOV4Y.png">
+<img width="auto" height="200px" src="https://i.imgur.com/boP7rWy.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/6e2Olmt.png">
+<img width="auto" height="200px" src="https://i.imgur.com/n4rJ90T.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/E6Sw639.png">
+<img width="auto" height="200px" src="https://i.imgur.com/rbKXQ1F.png">
 
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/GiKjvPj.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/lomMCa4.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/2l4l3vY.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/z2TL82e.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/aLq96XS.gif">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositions<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/forbidden.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
@@ -547,31 +528,56 @@ z-index: 3;
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<font style="font-size: 8px;" color="#b38d94">
-( click to download all the .swf files )
-</font><br><br>
-<a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img src="https://i.imgur.com/BltA2XT.gif"/></a>
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="auto" height="350px" src="https://i.imgur.com/yZDQncB.png"><br><br>
+<img width="auto" height="250px" src="https://i.imgur.com/iSQXs89.png"><br><br>
+　<img width="auto" height="200px" src="https://i.imgur.com/40yJb4m.png">
+<img width="auto" height="200px" src="https://i.imgur.com/KyF2u47.png"><br><br>
+<img width="auto" height="300px" src="https://i.imgur.com/uTSJoqY.png"/>
+<img width="auto" height="300px" src="https://i.imgur.com/jSHmf04.png"/><br><br>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web materials<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> ascii art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img src="https://i.imgur.com/5UJWsUc.png"><img src="https://i.imgur.com/5UJWsUc.png"><br><br>
-<img width="40" height="auto" src="https://i.imgur.com/w3nIJKw.png"> <img width="40" height="auto" src="https://i.imgur.com/oEETh0f.png"> <img width="40" height="auto" src="https://i.imgur.com/OoVhpd0.png"><br><br>
-<img width="110" height="auto" src="https://i.imgur.com/wSRLuW7.png"><br><br>
-<img width="auto" height="60" src="https://i.imgur.com/kjJ7zti.gif">　<img width="auto" height="60"src="https://i.imgur.com/hxS2jLj.gif"><br><br>
-<img width="auto" height="60" src="https://i.imgur.com/bvAiMrD.gif">　<img width="auto" height="60"src="https://i.imgur.com/7mKu6kW.png">
+<img src="https://i.imgur.com/QgQSreB.png">
+<img src="https://i.imgur.com/gQcFKYn.png">
+<img src="https://i.imgur.com/nMg7OJ5.png"><br><br>
+<img src="https://i.imgur.com/px7ebRm.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="400px" height="auto" src="https://i.imgur.com/kW0Y74l.png"><br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
+<br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/7fbv0PA.gif"> <img width="200px" height="auto" src="https://i.imgur.com/2rRb5tt.gif">
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> 3D modeling<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<font style="font-size: 8px;" color="#b38d94">
+<font style="font-size: 8px;" color="#b38d94"><br>
 ( click the previews to load the .glb files )
 </font>
 <br><br>
@@ -589,6 +595,8 @@ z-index: 3;
 <center>
 
 
+
+
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital painting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="300px" height="auto" src="https://i.imgur.com/3tWbz7w.png"><br><br>
@@ -598,6 +606,7 @@ z-index: 3;
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
+
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> video editing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
@@ -792,13 +801,6 @@ function resetPlayer() {
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> singing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/secret%20base.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games / templates<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/mNmqyU6.gif"><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/GOPih9T.png"><br><br>
@@ -808,15 +810,36 @@ function resetPlayer() {
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositions<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/forbidden.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web materials<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
-<br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/7fbv0PA.gif"> <img width="200px" height="auto" src="https://i.imgur.com/2rRb5tt.gif">
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
+<img src="https://i.imgur.com/5UJWsUc.png"><img src="https://i.imgur.com/5UJWsUc.png"><br><br>
+<img width="40" height="auto" src="https://i.imgur.com/w3nIJKw.png"> <img width="40" height="auto" src="https://i.imgur.com/oEETh0f.png"> <img width="40" height="auto" src="https://i.imgur.com/OoVhpd0.png"><br><br>
+<img width="110" height="auto" src="https://i.imgur.com/wSRLuW7.png"><br><br>
+<img width="auto" height="60" src="https://i.imgur.com/kjJ7zti.gif">　<img width="auto" height="60"src="https://i.imgur.com/hxS2jLj.gif"><br><br>
+<img width="auto" height="60" src="https://i.imgur.com/bvAiMrD.gif">　<img width="auto" height="60"src="https://i.imgur.com/7mKu6kW.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> singing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/secret%20base.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
