--- a/commissions.html
+++ b/commissions.html
@@ -438,100 +438,82 @@ z-index: 3;
 <div id="stuff">
 
 <div style="position:absolute; left:15%; right:15%; line-height: 12px;">
-<br><br>
+<br>
 
 
-<center><font color="#ed9e9e" style="font-size:9px">♡</font>　
-<font color="#ba8989" style="padding-bottom: 2px; border-bottom:1px dotted #ed9e9e;">commissions open</font>　
-<font color="#ed9e9e" style="font-size:9px">♡</font></center>
+<center>
+<sub><img width="auto" height="25px" src="https://i.imgur.com/C9C7AMP.png"/></sub>　<font color="#ad9893">layout commissions open</font> <font color="#d4a5a5" style="font-size:9px">♡</font>
+</center>
 <br><br>
 
 <font color="#af9d90" style="font-size:10px">
-do you feel tired of trying to adapt to social media ? do you think that no matter how hard you try, your account seems the same as everyone else ?<br>
-it is hard to show your individuality and post content in an original way in social media because you can't really customize your profile the way you want, you don't have the freedom to post in the format you want.<br>
-personal websites are very underrated nowadays, but they still are and always will be the most complete and accurate way to express yourself virtually !!<br>
+personal websites are very underrated nowadays, but they still are and always will be the most complete and accurate way to express yourself virtually.<br>
 all this freedom is a bit confusing if you're not used to dealing with codes, so that's why i'm here : to help you create your own little corner on the internet, to represent you, your personality and your works !!<br>
 </font>
 <br><br>
 
-<font color="#ba8989" style="font-size:10px">
-<sub><sub><img src="https://i.imgur.com/WMLQaUd.gif"/></sub></sub>　　what i will do for you :<br><br>
+<font color="#c79f9f" style="font-size:10px">
+<sub><sub><img width="auto" height="25px" src="https://i.imgur.com/h5hxikB.png"/></sub></sub>　what i will do for you :<br><br>
 </font>
 <font color="#aa998c" style="font-size:10px">
-　<font color="#ed9e9e" style="font-size:9px">♡</font>　make the layout of your dreams, just the way you want it to look like, with a very neat color pallete and an entire folder with matching graphics for you to use wherever you want !
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　make the layout of your dreams, just the way you want it to look like. you can send me images with examples and graphics you want me to use, or i can search for them and edit everything for you, accordingly to your expectations !
 <br><br>
-　<font color="#ed9e9e" style="font-size:9px">♡</font>　add all the content you want to put on your site, which can have multiple pages with different categories just like my website !
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　provide all the basic html & css codes and teach you how to use them, so you will not only be able to add content to your site in the future but as also acquire your own knowledge of coding. if you're interested in making your own layout, i can also provide you a blank layout base code that you can edit freely !
 <br><br>
-　<font color="#ed9e9e" style="font-size:9px">♡</font>　provide all the basic html and css codes and teach you how to use them, so you will not only be able to add content to your site in the future but as also acquire your own knowledge of coding !
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　organize a few custom interactive content for your site, like contact forms and chat boxes !
 <br><br>
-　<font color="#ed9e9e" style="font-size:9px">♡</font>　despite my difficulty with javascript, i can also provide some interactive content like the ones you find here on my website !
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　help you finding the perfect place to have your website. i recommend github, neocities, tumblr, blogger or carrd !
 <br><br>
-　<font color="#ed9e9e" style="font-size:9px">♡</font>　if you really really hate codes, remember i can make custom layouts for tumblr and blogger, and i can still keep updating content on the pages of your site for a lifetime, just for the price of 1 or 2 <a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596">coffees</font></a> per page ( depending on the amount of content ) !
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　if you've choosen a platform where you need to edit the html but are not interested in dealing with codes, i can still keep updating content on the pages of your site for a little fee ( depending on the amount of content ) !
 <br><br>
-　<font color="#ed9e9e" style="font-size:9px">♡</font>　i will be here forever to help you with problems with platforms, softwares and other difficulties with html that you may have in the future !
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　i will be here forever to help you with problems with platforms, softwares and other difficulties with html that you may have in the future !
+<br><br>
 </font>
 
 <br><br><br><br>
 
-<font color="#818caa" style="font-size:10px">
-<sub><sub><img src="https://i.imgur.com/6Shvs8U.gif"/></sub></sub>　　what i can't do for you :<br><br>
+<font color="#c79f9f" style="font-size:10px">
+<sub><sub><img width="auto" height="25px" src="https://i.imgur.com/p0rrAna.png"/></sub></sub>　what i can't do for you :<br><br>
 </font>
 <font color="#aa998c" style="font-size:10px">
-　<font color="#afbadb" style="font-size:9px">♡</font>　make layouts for "make your site" platforms like weebly, wix..
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　make layouts for "make your site" platforms like weebly, wix..
 <br>
-　<font color="#afbadb" style="font-size:10px">solution : </font>　i can make custom layouts for tumblr and blogger !
+　<font color="#c4a9a9" style="font-size:10px">solution : </font>　i can make custom layouts for tumblr, blogger and carrd, where you don't really need to deal with codes for editing basic content !
 <br><br>
-　<font color="#afbadb" style="font-size:9px">♡</font>　write complex javascript codes that use servers and everything, such as login platforms, purchase platforms..
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　write complex javascript codes that use servers and everything, such as login platforms, purchase platforms..
 <br>
-　<font color="#afbadb" style="font-size:10px">solution : </font>　i can make an online store based on text and image, where your customers can communicate with you through a contact form, chat box or the "disqus" comments system !
+　<font color="#c4a9a9" style="font-size:10px">solution : </font>　i can make an online store based on text and image, where your customers can communicate with you directly for ordering !
 <br><br>
-　<font color="#afbadb" style="font-size:9px">♡</font>　make a mobile version of your site or make a website where you can edit through your mobile phone ( you'll need a computer to edit anything on your site and add content )..
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　make a website where you can edit easily through your mobile phone..
 <br>
-　<font color="#afbadb" style="font-size:10px">solution : </font>　if you use tumblr there is a mobile version for it that is easy to use, and if not i can edit things for you if it's important and you don't have access to a computer for the price of 1 or 2 <a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596">coffees</font></a> per page ( depending on the amount of content ). also, your site will still be completely accessible by mobile, it just will not adapt perfectly visually to the screen size !
+　<font color="#c4a9a9" style="font-size:10px">solution : </font>　you can post stuff easily on mobile if you're using tumblr or carrd as platform. in any case, your website can be visited normally on mobile, it's just hard to edit html in a small screen. if you don't have a pc, remember that i can keep updating your website for a little fee !
 </font>
 
 <br><br><br><br><br>
 
-<font color="#db9b9b" style="font-size:10px">
-<sub><sub><img src="https://i.imgur.com/uiKZj2F.gif"/></sub></sub>　　aesthetics / themes :<br><br>
+<font color="#c79f9f" style="font-size:10px">
+<sub><sub><img width="auto" height="25px" src="https://i.imgur.com/HTjlZPU.png"/></sub></sub>　pricing :<br><br>
 </font><font color="#aa998c" style="font-size:10px">
-　　　　　･ <a href="https://aes.pooftie.me" target="_blank"><font color="#e8aca2">soft milk</font></a><br>
-　　　　　･ <a href="https://aes.pooftie.me/ii" target="_blank"><font color="#ddca7e">honey morning</font></a><br>
-　　　　　･ <a href="https://aes.pooftie.me/iii" target="_blank"><font color="#ad9593">midnight angel</font></a><br>
-　　　　　･ <a href="https://aes.pooftie.me/iv" target="_blank"><font color="#b1c0d8">happy dreams</font></a><br>
-　　　　　･ <a href="https://aes.pooftie.me/v" target="_blank"><font color="#ba3434">strawberry valentine</font></a><br>
-　　　　　･ <a href="https://aes.pooftie.me/vi" target="_blank"><font color="#838a70">fairy garden</font></a><br>
-　　　　　･ <a href="https://aes.pooftie.me/vii" target="_blank"><font color="#dfdae3">pure heart</font></a>
+　<font color="#c4a9a9" style="font-size:10px">full layout made by me :</font>　$30 dollars ( $150 reais )<br><br>
+　<font color="#c4a9a9" style="font-size:10px">blank layout base code :</font>　$10 dollars ( $50 reais )<br><br>
+　<font color="#c4a9a9" style="font-size:10px">adding content to extra pages :</font>　$5 dollars ( $20 reais )<br><br>
 
-<br><br><br>
-these are just some collage examples of the aesthetics i'm used to. my website represents the first aesthetic, but it could be made visually in infinite ways ; i can make it more simple or even focused in a specific character / series !
-<br>
-
-<br><br><br><br><br>
-
-<font color="#bfa57a" style="font-size:10px">
-<sub><sub><img src="https://i.imgur.com/lpRUV0t.gif"/></sub></sub>　　pricing :<br><br>
-</font><font color="#aa998c" style="font-size:10px">
-　<font color="#e2c993" style="font-size:10px">layout :</font>　$30 dollars ( $150 reais )<br><br>
-　<font color="#e2c993" style="font-size:10px">each extra page :</font>　$5 dollars ( $20 reais )<br><br>
-
+i will add content to the index page for free, and everything can be edited later on. i'll also provide you a blank page for you to add content by yourself, if you don't want to pay me for that !<br
+<br><br>
 payments must be made through paypal ( middlepot@gmail.com )<br>
-if you live in brazil you can also pay me through pix ( middlepot@gmail.com ) or <a id="linkzinho" href="https://picpay.me/middlepot" target="_blank"><font color="#b7a596">picpay</font></a>.
-<br><br>
-the index page and 404 page are for free. i'll also provide you a blank page in case you want to go further by yourself !<br>
-initially i'll make the index an example page for you with some cute graphics and codes i am going to provide !<br>
-all the text will be edited later on, as you wish.<br>
-<br><br>
-<style>
-#mm { color: #aa998c; }
-</style>
-<font color="#e2c993" style="font-size:9px">♡</font>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#b7a596">contact form</font></a> , through my email ( letters@middlepot.com ) or through one of these :<br><br>
-　　　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
-　　　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pooftie" target="_blank" >@pooftie</a><br><br>
-　　　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
-　　　　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://dsc.gg/pooftie" target="_blank" >pooftie#1997</a>
+if you live in brazil you can also pay me through pix ( middlepot@gmail.com ) or <a id="linkzinho" href="https://picpay.me/middlepot" target="_blank"><font color="#bda0a0">picpay</font></a>.
+<br><br><br>
 
-<br>
+<style>
+#mm { color: #bda0a0; }
+</style>
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#c79f9f">contact form</font></a> , through my email ( letters@middlepot.com ) or through one of these :<br><br>
+　　　　<font color="#a89696" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
+　　　　<font color="#a89696" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pooftie" target="_blank" >@pooftie</a><br><br>
+　　　　<font color="#a89696" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
+　　　　　<font color="#a89696" style="font-size:10px">discord :</font> <a id="mm" href="https://dsc.gg/pooftie" target="_blank" >pooftie#1997</a>
+
+<br><br>
 
 <br><br><br>
 </div>
