--- a/commissions.html
+++ b/commissions.html
@@ -494,9 +494,9 @@ all this freedom is a bit confusing if you're not used to dealing with codes, so
 <font color="#c79f9f" style="font-size:10px">
 <sub><sub><img width="auto" height="25px" src="https://i.imgur.com/HTjlZPU.png"/></sub></sub>　pricing :<br><br>
 </font><font color="#aa998c" style="font-size:10px">
-　<font color="#c4a9a9" style="font-size:10px">full layout made by me :</font>　$30 dollars ( $150 reais )<br><br>
-　<font color="#c4a9a9" style="font-size:10px">blank layout base code :</font>　$10 dollars ( $50 reais )<br><br>
-　<font color="#c4a9a9" style="font-size:10px">adding content to extra pages :</font>　$5 dollars ( $20 reais )<br><br>
+　<font color="#c4a9a9" style="font-size:10px">full layout made by me :</font>　$30 dollars.<br><br>
+　<font color="#c4a9a9" style="font-size:10px">blank layout base code :</font>　$10 dollars.<br><br>
+　<font color="#c4a9a9" style="font-size:10px">adding content to extra pages :</font>　$5 dollars.<br><br>
 
 i will add content to the index page for free, and everything can be edited later on. i'll also provide you a blank page for you to add content by yourself, if you don't want to pay me for that !<br
 <br><br>
