--- a/links.html
+++ b/links.html
@@ -506,7 +506,7 @@ z-index: 3;
 i do have some secret accounts that i use for backup or personal stuff.<br>
 i don't use the middlepot name on social media, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
 if you have any doubts, please don't hesitate to contact me :<br><br></font>
-<font id="linkzinho" color="#cea9a9">letters@middlepot.com</font></font></center>
+<font id="linkzinho" color="#cea9a9">middlepot@gmail.com</font></font></center>
 <br><br><br>
 
 </div>
