--- a/commissions.html
+++ b/commissions.html
@@ -507,7 +507,7 @@ if you live in brazil you can also pay me through pix ( middlepot@gmail.com ) or
 <style>
 #mm { color: #bda0a0; }
 </style>
-　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#c79f9f">contact form</font></a> , through my email ( letters@middlepot.com ) or through one of these :<br><br>
+　<sub><img width="auto" height="15px" src="https://i.imgur.com/MQKNonW.png"/></sub>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#c79f9f">contact form</font></a> , through my email or through one of these :<br><br>
 　　　　<font color="#a89696" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
 　　　　<font color="#a89696" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pooftie" target="_blank" >@pooftie</a><br><br>
 　　　　<font color="#a89696" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
