--- a/portfolio.html
+++ b/portfolio.html
@@ -520,8 +520,8 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="350px" height="auto" src="https://i.imgur.com/v333iOT.png"><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
 <img width="175px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="175px" height="auto" src="https://i.imgur.com/QApSfkU.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
@@ -838,12 +838,6 @@ function resetPlayer() {
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> singing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/secret%20base.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> fonts<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
@@ -856,18 +850,16 @@ function resetPlayer() {
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> pc & phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"><br><br>
-<img width="400px" height="auto" src="https://i.imgur.com/sFC4LuS.gif"><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/FB1yE5M.png"><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/S1Y4GqA.gif">
+<img width="auto" height="350px" src="https://i.imgur.com/FB1yE5M.png"> 
+<img width="auto" height="350px" src="https://i.imgur.com/6QZX0tS.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone case decor<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="250px" height="auto" src="https://i.imgur.com/qgTfLuE.png"><br><br>
-<img width="250px" height="auto" src="https://i.imgur.com/2BIzI62.png">
+<img width="auto" height="270px" src="https://i.imgur.com/qgTfLuE.png"> 
+<img width="auto" height="270px" src="https://i.imgur.com/2BIzI62.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 
