--- a/portfolio.html
+++ b/portfolio.html
@@ -492,25 +492,12 @@ z-index: 3;
 
 
 
-
-
-
-
-
-
-
-
-
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="auto" height="200px" src="https://i.imgur.com/TAoxy3Y.png">
-<img width="auto" height="200px" src="https://i.imgur.com/xlTn2Iy.png"><br><br>
-<img width="auto" height="200px" src="https://i.imgur.com/3jYOV4Y.png">
-<img width="auto" height="200px" src="https://i.imgur.com/boP7rWy.png"><br><br>
-<img width="auto" height="200px" src="https://i.imgur.com/6e2Olmt.png">
-<img width="auto" height="200px" src="https://i.imgur.com/n4rJ90T.png"><br><br>
-<img width="auto" height="200px" src="https://i.imgur.com/E6Sw639.png">
-<img width="auto" height="200px" src="https://i.imgur.com/rbKXQ1F.png">
+<img width="auto" height="180px" src="https://i.imgur.com/En5glYJ.png"><br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/SoiKb3i.png"><br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/oIj1rBe.png"><br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/hSK8UjC.png">
 
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
