--- a/links.html
+++ b/links.html
@@ -438,14 +438,14 @@ z-index: 3;
 <div id="stuff">
 
 <div style="position:absolute; left:23%; right:23%;">
-<br><br><br><br>
+<br><br><br>
 <style>
 #ooo { color: #c4a9ab; }
 #actv { color: #d1abab; }
 #eee { color: #d1abab; }
 </style>
 
-<div style="position:relative; top:20px; width: 100px; height: 130px; overflow:hidden; float:left; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:13px; padding:5px;">
+<div style="position:relative;  top:5; width: 110px; height: 200px; overflow:hidden; float:left; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:13px; padding:5px;">
 <font color="#b89c9f">
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> my accs :<br></font>
 <br>
@@ -455,12 +455,16 @@ z-index: 3;
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> chat apps :</font><br>
 <br>
 　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://dsc.gg/pooftie" target="_blank" >♡</a><br>
+<br>
+<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/DWrloPs.png"></sub></sub></sub><font color="#b89c9f"> gamedev :</font><br>
+<br>
+<font color="#7a6b6b">steam </font><a id="eee" href="https://s.team/u/middlepot" target="_blank" >♡</a>　<font color="#7a6b6b">itch </font><a id="eee" href="https://middlepot.itch.io" target="_blank" >♡</a>　<font color="#7a6b6b">gj </font><a id="eee" href="https://middlepot.gamejolt.io" target="_blank" >♡</a><br>
 </div>
 
-<div style="position:relative; float:right; overflow:hidden; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px;">
+<div style="position:relative; top:5; float:right; overflow:hidden; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 115px; height: 200px; overflow-x:hidden; line-height:13px; padding:5px;">
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b89c9f">
  my html stuff :</font><br>
-<div style="border: none; width: 100px; height: 150px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:13px; padding-right:5px; padding-left:5px;">
+<div style="border: none; width: 100px; height: 170px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:13px; padding-right:5px; padding-left:5px;">
 <a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode fonts</a>
 <br>
 <a id="ooo" href="https://care.pooftie.me" target="_blank" >self care archive</a>
@@ -503,8 +507,7 @@ z-index: 3;
 <div style="position:absolute; left:20%; right:20%; top:70%;">
 <font color="#a59490" style="font-size:9px;">
 <center><b>important :</b><br>
-i do have some secret accounts that i use for backup or personal stuff.<br>
-i don't use the middlepot name on social media, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
+i do have some secret accounts that i use for backup or personal stuff, but i don't use "pooftie" or "middlepot" on these, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
 if you have any doubts, please don't hesitate to contact me :<br><br></font>
 <font id="linkzinho" color="#cea9a9">middlepot@gmail.com</font></font></center>
 <br><br><br>
