--- a/recommended.html
+++ b/recommended.html
@@ -460,7 +460,7 @@ z-index: 3;
 　　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
 　　<a href="https://nef.neocities.org" target="_blank"><img src="https://i.imgur.com/RMLJJZo.gif"></a>
 
-　　‌‌<br><br>　<a href="https://cyber.nymph.garden" target="_blank"><img src="https://i.imgur.com/hC0kJmY.gif"></a>
+　　‌‌<br><br>　<a href="https://mimkitty.com" target="_blank"><img src="https://i.imgur.com/6W5CjTW.gif"></a>
 　<a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
 　<a href="https://hishoku-sora.blogspot.com" target="_blank"><img src="https://i.imgur.com/VpojhaF.gif"></a>
 
