--- a/milkywoods.html
+++ b/milkywoods.html
@@ -556,13 +556,13 @@ function getPosition(el) {
 
 <div style="position:absolute; left:10%; right:10%;">
 <center>
-<img src="https://i.imgur.com/VGk4m2O.gif"/><font color="#9c7776"> ‌milky woods</font>
+<sub><img width="auto" height="20px" src="https://i.imgur.com/OKCO1eA.png"/></sub><font color="#9c7776"> ‌milky woods</font>
 <br><font style="font-size: 8px;" color="#ad8887"> ‌ ‌ ‌ playing with dreams</font>
 <br>
 
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
-<sub><img src="https://i.imgur.com/xZ5r0Zx.gif"/></sub> ‌ my released games ( outside links ) :
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my released games ( outside links ) :
 <br><br>
 <div style="width:240px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 <a href="https://picrew.me/image_maker/619666" target="_blank"><img width="230px" height="auto" src="https://i.imgur.com/NwfY8KN.png"/></a>
@@ -579,7 +579,7 @@ function getPosition(el) {
 
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
-<sub><img src="https://i.imgur.com/L7o6W1E.gif"/></sub> ‌ my html games ( pc & mobile ) :</font>
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my html games ( pc & mobile ) :</font>
 <br><br>
 <div style="width:320px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 
@@ -592,7 +592,7 @@ function getPosition(el) {
 
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
-<sub><img src="https://i.imgur.com/NTkeKx8.gif"/></sub> ‌ my flash games ( pc only ) :
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my flash games ( pc only ) :
 <br><br>
 <div style="width:310px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 <a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img src="https://i.imgur.com/BltA2XT.gif"/></a>
